Fixed responsive 3D on mobile

--- a/src/styles/About/about.scss
+++ b/src/styles/About/about.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   padding-inline: 1rem;
+  margin-top: 6rem;
   padding-bottom: 15rem;
   max-width: 1300px;
   margin-inline: auto;
@@ -35,13 +36,22 @@
       width: 50%;
       height: 100%;
       img {
-        width: 80%;
+        width: 70%;
         box-shadow: 0px 0px 10px white;
         border-radius: 10px;
-        height: 600px;
+        max-height: 35rem;
         object-fit: fill;
+        @include respond-to('small') {
+          width: 90%;
+          max-height: 10rem;
+        }
         @include respond-to('medium') {
           width: 90%;
+          max-height: 25rem;
+        }
+        @include respond-to('large') {
+          width: 90%;
+          max-height: 30rem;
         }
       }
     }
@@ -67,6 +77,9 @@
           font-family: 'Oswald', sans-serif;
           font-size: 1.3rem;
           line-height: 1.4rem;
+          @include respond-to('small') {
+            font-size: 1rem;
+          }
         }
       }
       .tech-box {
@@ -76,7 +89,7 @@
         gap: 2.5rem;
         padding-top: 4rem;
         @include respond-to('small') {
-          gap: 1rem;
+          gap: 3rem;
         }
         &__header {
           font-size: 2.5rem;
@@ -86,6 +99,10 @@
         &__title {
           font-family: 'Lobster', sans-serif;
           font-size: 2rem;
+          padding-bottom: 0.5rem;
+          @include respond-to('small') {
+            font-size: 1.5rem;
+          }
         }
         &__list {
           display: flex;
