--- a/src/styles/Hero/hero.scss
+++ b/src/styles/Hero/hero.scss
@@ -39,8 +39,9 @@
         flex-direction: column;
         line-height: 5.5rem;
         height: 180px;
-        text-shadow: 1px 1px 10px white;
+        text-shadow: 1px 1px 7px white;
         @include respond-to('small') {
+          text-shadow: 1px 1px 5px white;
           font-size: 25px;
           line-height: 1rem;
           height: 150px;
